--- a/GroupX/GroupX.vcxproj
+++ b/GroupX/GroupX.vcxproj
@@ -152,7 +152,16 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Armour.h" />
+    <ClInclude Include="ArmourType.h" />
+    <ClInclude Include="BlackWitch.h" />
+    <ClInclude Include="Brawler.h" />
+    <ClInclude Include="CharacterState.h" />
+    <ClInclude Include="Cleric.h" />
     <ClInclude Include="GameCharacter.h" />
+    <ClInclude Include="Orc.h" />
+    <ClInclude Include="Weapon.h" />
+    <ClInclude Include="Weaponry.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
