--- a/GroupX/GroupX.vcxproj
+++ b/GroupX/GroupX.vcxproj
@@ -148,19 +148,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlackWitch.cpp" />
+    <ClCompile Include="Brawler.cpp" />
+    <ClCompile Include="Cleric.cpp" />
     <ClCompile Include="GameCharacter.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Orc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Armour.h" />
-    <ClInclude Include="ArmourType.h" />
     <ClInclude Include="BlackWitch.h" />
     <ClInclude Include="Brawler.h" />
-    <ClInclude Include="CharacterState.h" />
     <ClInclude Include="Cleric.h" />
     <ClInclude Include="GameCharacter.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Orc.h" />
-    <ClInclude Include="Weapon.h" />
     <ClInclude Include="Weaponry.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
