--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{8CB84275-97BE-486C-88D5-08F3651B7D02}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Main</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
