--- a/GroupX/GroupX.vcxproj
+++ b/GroupX/GroupX.vcxproj
@@ -23,7 +23,6 @@
     <ProjectGuid>{BD30C8D7-7BAC-4537-A536-CF6186BDC757}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GroupX</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>Group34</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -149,11 +148,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Armour.cpp" />
+    <ClCompile Include="BlackWitch Attack.cpp" />
     <ClCompile Include="BlackWitch.cpp" />
+    <ClCompile Include="Brawler Attack.cpp" />
     <ClCompile Include="Brawler.cpp" />
+    <ClCompile Include="Cleric Attack.cpp" />
     <ClCompile Include="Cleric.cpp" />
     <ClCompile Include="GameCharacter.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Orc Attack.cpp" />
     <ClCompile Include="Orc.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
